$Id$

TBD

* added sans-serif to css to keep unix clients happy
* fixed alignment of graph labels
* eliminate vestigial 'graph' CGI option.
* labels for services and data sets are now implemented throughout all cgi
   scripts.  the first place to define them is nagiosgraph.conf.  labels
   can be further specialized by defining them in hostdb.conf and
   groupdb.conf files.
* added mechanism to define default subset of datasets per service.
* added format strings for dates and times
* fixed showservice.cgi so that it now requires only host names in the 
   servdb.conf file.
* made parsing and handling of *db.conf files more consistent
* the *db.conf files now include detailed comments about file format
* comment character in *db.conf file must be at beginning of line in order
   to be treated as comment.
* added showgroup.cgi to display arbitrary groups of host/service/dataset.
   group definitions go in groupdb.conf.
* major overhaul of the javascript.  state is managed better now, and a lot
   of redundant code was removed.  there are more functions now, but the
   functions are more precise with fewer side effects.
* retain expanded/collapsed state of controls between reloads
* retain selection state of host, service, data set, and time periods
* added light/dark and green-tuple custom color palettes to config file
* fixed debugging controls in testcolor.cgi, showgraph.cgi, and show.cgi
* right-align text in the color tester
* updated the documentation: README, INSTALL, TODO
* new configuration options (see nagiosgraph.conf for details):
    showtitle
    showdesc
    showgraphtitle
    graphonly
    hidelegend
    hidengtitle
    lineformat
    plotasLINE1, plotasLINE2, plotasLINE3, plotasAREA, plotasTICK
    negate
    nagioscgiurl
    nagiosgraphcgiurl
    refresh
    geometries
    expand_timeall, expand_timehost, expand_timeservice, expand_timegroup
    timeformat_now
    timeformat_day, timeformat_week, timeformat_month